# claude-squad

./: .gitignore  AGENTS.md  CLA.md  CONTRIBUTING.md  README.md  clean.sh  clean_hard.sh  go.mod  install.sh  main.go
app/: app.go  app_test.go  help.go
config/: config.go  config_test.go  state.go
daemon/: daemon.go
log/: log.go
plugins/zellij/agent-fleet-tile/: Cargo.toml  README.md
plugins/zellij/agent-fleet-tile/layouts/: agent-fleet.kdl
plugins/zellij/agent-fleet-tile/scripts/: build.sh
plugins/zellij/agent-fleet-tile/src/: lib.rs
session/: instance.go  storage.go
session/git/: worktree.go  worktree_git.go  worktree_ops.go
session/zellij/: pty.go  zellij.go  zellij_test.go  zellij_unix.go  zellij_windows.go
ui/: consts.go  diff.go  list.go  menu.go  preview.go  preview_test.go  tabbed_window.go
web/: next.config.ts  package-lock.json  package.json
web/src/app/: layout.tsx  page.tsx
