[package]
name = "agent-fleet-tile"
version = "0.1.0"
edition = "2021"
description = "Zellij tile plugin to create git worktrees and launch Agent Fleet-compatible agents"
authors = ["Agent Fleet Contributors"]
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]
name = "agent_fleet_tile"

[dependencies]
zellij-tile = "0.43.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
shlex = "1.3"
